@@ -57,7 +57,7 @@ class DatabaseRefreshTask(Task):
         # FIXME: review what signals should be sent when a scan is performed
         # FIXME: these should be removed soon
         app.settings["last_scan"] = str(time.time())
-        app.settings["config_refresh"] = str(time.time())
+        app.settings["__config_refresh"] = str(time.time())
         # this must be called from main, since callbacks are broadcast
         # when settings are changed
         Signal("scan_done").notify()
